--- a/english.html
+++ b/english.html
@@ -635,6 +635,8 @@ Error message and password prompt
 
 <li>Jeff Bridges</li>
 
+<li>Jim Jarmusch</li>
+
 <li>Joe and Norma</li>
 
 <li>John Goodman</li>
@@ -9106,7 +9108,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Pele Ozen]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Jim Jarmusch]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9733,8 +9735,7 @@ Beautiful Ahal is the beautiful [[Ahal Eden|https://www.instagram.com/ahaleden/]
  &lt;&lt;heblink [[רוטב בשאמל]]&gt;&gt;</pre>
 </div>
 <div created="20200420141235022" modified="20200422203332321" tags="[[Here in the Ghetto]] [[Corona beings]]" title="Belinda">
-<pre>
-[img[pictures/belinda.jpg]]
+<pre>[img[pictures/belinda.jpg]]
 
 
 !!![[Tomer]]:
@@ -11859,6 +11860,21 @@ I say that I love Jeff Bridges, but more than all he's the [[dude|https://www.im
  
 </pre>
 </div>
+<div created="20200423124403855" modified="20200423124530090" tags="[[Outer sisters]] Music Films" title="Jim Jarmusch">
+<pre>
+[img[pictures/jim-jarmusch.jpg]]
+
+
+
+
+
+
+
+
+ &lt;&lt;heblink [[ג'ים ג'רמוש]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200322155655155" modified="20200322155835396" tags="Houses Mothers" title="Joe and Norma">
 <pre>[img[pictures/jo-ve-norma.jpg]]
 
@@ -12567,7 +12583,7 @@ And tea is for the sicken ones.
 
 </pre>
 </div>
-<div created="20200213154636920" modified="20200420173849995" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]]" title="Meals">
+<div created="20200213154636920" modified="20200423124505773" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]]" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
 
@@ -15018,8 +15034,7 @@ After searching for a while, there comes a time when [[Leonard|https://www.imdb.
 </pre>
 </div>
 <div created="20200420173740515" modified="20200422202909541" tags="[[Menopause sisters]] [[True stories]] [[Corona beings]]" title="Untidy is the new well-groomed">
-<pre>
-[img[pictures/muznach.jpg]]
+<pre>[img[pictures/muznach.jpg]]
 
 !!![[Jazz's mom]]:
 
