--- a/index.html
+++ b/index.html
@@ -461,6 +461,8 @@ Error message and password prompt
 
 <li>ג'יין פונדה</li>
 
+<li>ג'ים ג'רמוש</li>
+
 <li>ג'ף ברידג'ס</li>
 
 <li>גבר פריבילגי</li>
@@ -9219,7 +9221,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="נולדנו [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ג'ים ג'רמוש]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9239,7 +9241,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200422203744545" title="$:/temp/search">
+<div created="20161023184814872" modified="20200422210718868" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10670,7 +10672,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Baking]]&gt;&gt;
 </pre>
 </div>
-<div created="20180128153940319" modified="20200420173958700" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
+<div created="20180128153940319" modified="20200423124600505" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
 <pre>[img[pictures/aruchot.jpg]]
 
 !!![[יויו]]:
@@ -11204,6 +11206,16 @@ Is where I want to be
 
 
 &lt;&lt;englink [[Jane Fonda]]&gt;&gt;</pre>
+</div>
+<div created="20200423124106208" modified="20200423124623889" tags="[[אחיות חוץ]] סרטים מוזיקה" title="ג'ים ג'רמוש">
+<pre>
+[img[pictures/jim-jarmusch.jpg]]
+
+
+
+
+
+&lt;&lt;englink [[Jim Jarmusch]]&gt;&gt;</pre>
 </div>
 <div created="20171212163308820" modified="20200324163251629" tags="[[אחיות חוץ]] סרטים [[האנקי דורי]]" title="ג'ף ברידג'ס">
 <pre>[img[pictures/jeff-bridges.jpg]]
