--- a/english.html
+++ b/english.html
@@ -9108,7 +9108,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Jim Jarmusch]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9128,7 +9128,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200422210942464" title="$:/temp/search">
+<div created="20161023184814872" modified="20200424100306357" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11311,13 +11311,13 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
  &lt;&lt;heblink [[הארבעה 2]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213153541799" modified="20200324170345372" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants [[Hunky Dory]]" title="HaAchim">
+<div created="20200213153541799" modified="20200424100311014" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants [[Hunky Dory]]" title="HaAchim">
 <pre>[img[pictures/the-brothers.jpg]]
 
 
 [[Yoyo]]:
 
-[[Tomer]] took us in the last time we visited ]]dad|Papa Yoel]], to eat at [[Haachim|https://www.haachim.co.il/]], the brothers, and at the moment we stepped in it was clear that we have business with [[sisters|Coen Sisters]]. It's always full of people who seem to be enjoying and happy, the alcohol is not that expensive compared to the republic, the nicest kindest staff. There are tables outside on the pavement, and in the inner part, there are different types of tables, the bar of the &quot;cold service&quot; and the drinking bar, and you can sit around them. The music is like walking in an Emir Kusturica's film, who met [[Tony Soprano|The Sopranos]] only without the murders and the fights, and then they went to meet the Greek from [[THE WIRE|The Wire]] in a good way, and met [[Arik Lavie|https://en.wikipedia.org/wiki/Arik_Lavie]]. It's really really tasty there. Meat and vegetables on the grill but not only, there are vegetables in many forms. I love their hummus and the pitas, and mostly the labaneh. Visiting there always inspires me when I return to the [[kitchen|Delicatessen Chez Genevieve]].
+[[Tomer]] took us in the last time we visited [[dad|Papa Yoel]], to eat at [[Haachim|https://www.haachim.co.il/]], the brothers, and at the moment we stepped in it was clear that we have business with [[sisters|Coen Sisters]]. It's always full of people who seem to be enjoying and happy, the alcohol is not that expensive compared to the republic, the nicest kindest staff. There are tables outside on the pavement, and in the inner part, there are different types of tables, the bar of the &quot;cold service&quot; and the drinking bar, and you can sit around them. The music is like walking in an Emir Kusturica's film, who met [[Tony Soprano|The Sopranos]] only without the murders and the fights, and then they went to meet the Greek from [[THE WIRE|The Wire]] in a good way, and met [[Arik Lavie|https://en.wikipedia.org/wiki/Arik_Lavie]]. It's really really tasty there. Meat and vegetables on the grill but not only, there are vegetables in many forms. I love their hummus and the pitas, and mostly the labaneh. Visiting there always inspires me when I return to the [[kitchen|Delicatessen Chez Genevieve]].
 
 
 
@@ -11861,8 +11861,7 @@ I say that I love Jeff Bridges, but more than all he's the [[dude|https://www.im
 </pre>
 </div>
 <div created="20200423124403855" modified="20200423124530090" tags="[[Outer sisters]] Music Films" title="Jim Jarmusch">
-<pre>
-[img[pictures/jim-jarmusch.jpg]]
+<pre>[img[pictures/jim-jarmusch.jpg]]
 
 
 
