--- a/index.html
+++ b/index.html
@@ -9225,7 +9225,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מהחלון של המטבח]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ג'ים ג'רמוש]] משפחות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16675,13 +16675,11 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200426132241186" modified="20200426145208266" tags="אימהות ארוחות בתים ילדים" title="משפחות">
+<div created="20200426132241186" modified="20200426203956075" tags="אימהות ארוחות בתים ילדים" title="משפחות">
 <pre>[img[pictures/families.jpg]]
 
 
-!!![[הצוות]]:
 
-[[משפחה|https://he.wikipedia.org/wiki/%D7%9E%D7%A9%D7%A4%D7%97%D7%94]] לא בוחרים
 
 
 &lt;&lt;list-links filter:&quot;[tag[משפחות]]&quot;&gt;&gt;
