--- a/english.html
+++ b/english.html
@@ -887,6 +887,8 @@ Error message and password prompt
 
 <li>Powders</li>
 
+<li>Praying at Bilu garden</li>
+
 <li>Pride here</li>
 
 <li>Prince</li>
@@ -9112,7 +9114,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Autumn [[Coen Sisters]]" title="$:/StoryList">
+<div list="Once [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9132,7 +9134,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200428104249591" title="$:/temp/search">
+<div created="20161023184814872" modified="20200429113007149" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9687,7 +9689,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200428095954359" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]]" title="Baking">
+<div created="20200216150039212" modified="20200429135846356" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -13055,7 +13057,7 @@ Last week I went to meet a friend at [[Sarona|http://www.saronatlv.co.il/]], and
  &lt;&lt;heblink [[בדרך לשרונה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215161549719" modified="20200215162514105" tags="Children" title="Once">
+<div created="20200215161549719" modified="20200429113045831" tags="Children [[True stories]]" title="Once">
 <pre>!!![[Coen Sisters]]:
 ''
 When smoking was permitted''
@@ -13063,12 +13065,13 @@ When smoking was permitted''
 [img[pictures/paam-haya-mootar.jpg]]
 
 
-
-
-&lt;&lt;list-links filter:&quot;[tag[Once]]&quot;&gt;&gt;
 ''
 
 It seemed like, everything is fine''
+
+
+&lt;&lt;list-links filter:&quot;[tag[Once]]&quot;&gt;&gt;
+
 
  &lt;&lt;heblink [[פעם]]&gt;&gt;
 
@@ -13388,6 +13391,15 @@ Egg powder? If by any chance you dropped an egg, let it dry, let the cat scratch
 
  &lt;&lt;heblink [[אבקות]]&gt;&gt;
 </pre>
+</div>
+<div created="20200429135731380" modified="20200429135930238" tags="[[Here in the Ghetto]] [[Corona beings]] [[True stories]] [[On the road to somewhere]]" title="Praying at Bilu garden">
+<pre>
+[img[pictures/bilugarden.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[מתפללים בגינת בילו]]&gt;&gt;</pre>
 </div>
 <div created="20200220153930451" modified="20200220154602996" tags="[[Here in the Ghetto]] Metafiction [[Coffee shops]] [[On the road to somewhere]]" title="Pride here">
 <pre>[img[pictures/pride.jpg]]
