--- a/index.html
+++ b/index.html
@@ -1081,6 +1081,8 @@ Error message and password prompt
 
 <li>מתכונים טבעוניים</li>
 
+<li>מתפללים בגינת בילו</li>
+
 <li>נאמני הגנזך</li>
 
 <li>נדיה</li>
@@ -9225,7 +9227,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מתפללים בגינת בילו]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9245,7 +9247,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200428095302295" title="$:/temp/search">
+<div created="20161023184814872" modified="20200428104203788" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10676,7 +10678,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Baking]]&gt;&gt;
 </pre>
 </div>
-<div created="20180128153940319" modified="20200426192958240" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
+<div created="20180128153940319" modified="20200429135957638" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
 <pre>[img[pictures/aruchot.jpg]]
 
 !!![[יויו]]:
@@ -16771,6 +16773,28 @@ We rise to play a greater part.
 
 </pre>
 </div>
+<div created="20200429135615053" modified="20200429140022062" tags="[[כאן בגטו]] [[הלכות קורונה]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="מתפללים בגינת בילו">
+<pre>
+
+[img[pictures/bilugarden.jpg]]
+
+
+
+
+&lt;&lt;englink [[Praying at Bilu garden]]&gt;&gt;
+
+
+
+
+
+
+
+
+
+
+
+</pre>
+</div>
 <div created="20170612161528805" modified="20200426134914472" tags="הצוות [[קופים ממונעים]] [[בדרך לאן שהוא]] [[משפחת באומן]] [[מטא בדיון]] משפחות" title="נאמני הגנזך">
 <pre>[img[pictures/neemaney.jpg]]
 
@@ -17931,7 +17955,7 @@ May the lord bless your soul, I love you girl
 &lt;&lt;englink [[With Yoyo in Amsterdam]]&gt;&gt;
 </pre>
 </div>
-<div created="20180214165830427" modified="20200426135149467" tags="סדרות [[אחיות חוץ]] טלוויזיה סגירים משפחות" title="עמוק באדמה">
+<div created="20180214165830427" modified="20200428100854055" tags="סדרות [[אחיות חוץ]] טלוויזיה סגירים משפחות" title="עמוק באדמה">
 <pre>[img[pictures/six-feet-under.jpg]]
 
 !!![[גורה]]:
@@ -17939,7 +17963,7 @@ May the lord bless your soul, I love you girl
 בשבועיים האחרונים שתינו בצמא את [[עמוק באדמה|http://www.imdb.com/title/tt0248654/]].
 אם סדרות הן מה שעד לא מזמן היו ספרים עבורנו , אז עמוק באדמה הוא ספר מעולה שיש בו כל מה שאתה מבקש מספר להיות - חכם, יפה, מחכים, מצחיק, רגיש, מרגש, קיצוני, אמיתי למרות שהוא בדוי, עם דמויות שאתה אוהב והן הולכות איתך לפחות בימים בהם אתה קורא אותן, ואתה מתגעגע אליהן ורוצה לדעת מה עוד קרה, ובסוף אתה קצת מאט - כי אתה לא רוצה להיפרד מהן, וכשזה נגמר אתה ממשיך לקרוא בזה עוד.
 
-מכל מי שמת בסדרה, הכי היה קשה לי עם המוות של [[הקדילאק|https://www.historicvehicle.org/five-famous-hearses/]] של [[קלייר|http://www.imdb.com/name/nm0024404/?ref_=tt_cl_t4]]. אחר כך זה צבט לראות אותה נוסעת במכונית קומפקטית ונטולת אופי או חן כמו אלה שעושים [[עכשיו|פעם]] אך יחד עם זה - נוסעת אל העתיד המבטיח [[בקליפ הסיום המרגיע|https://www.youtube.com/watch?v=f3-MJyRUkhs]] .
+מכל מי שמת בסדרה, הכי היה קשה לי עם המוות של [[הקדילאק|https://www.historicvehicle.org/five-famous-hearses/]] של [[קלייר|http://www.imdb.com/name/nm0024404/?ref_=tt_cl_t4]]. אחר כך זה צבט לראות אותה נוסעת במכונית קומפקטית ונטולת אופי או חן כמו אלה שעושים [[עכשיו|פעם]] אך יחד עם זה - נוסעת אל העתיד המבטיח [[בסיום המרגיע|https://www.youtube.com/watch?v=O2nTyiMEukE]] .
 
 אני ממש אוהבת את בני משפחת פישר ושאר הדמויות. הן מגולמות על ידי שחקנים מקסימים גם בהם התאהבתי. [[גם|https://www.youtube.com/watch?v=wYUJZSl3V4E]] התסריטאים נפלאים והבמאים והארט והצילום והעריכה המוש [[ואלן בול|אלן בול]]. תודה  ואהבה מיויו, אנג'ליק וממני.
 
