--- a/index.html
+++ b/index.html
@@ -9218,7 +9218,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200426135637971" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200426135639480" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200429145029457" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -16773,10 +16773,15 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200429135615053" modified="20200429140022062" tags="[[כאן בגטו]] [[הלכות קורונה]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="מתפללים בגינת בילו">
+<div created="20200429135615053" modified="20200429151216291" tags="[[כאן בגטו]] [[הלכות קורונה]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="מתפללים בגינת בילו">
 <pre>
 
 [img[pictures/bilugarden.jpg]]
+
+
+!!![[תומר]]:
+
+ערב יום העצמאות התש&quot;פ עם הודעות על הקלות אך גם על סגר, הנחתי את ננו אצל [[אימא של ג'אז]] ויצאתי [[לשורצקי|שורצקי]], חוצה את יהודה הלוי, חולף על פני בית הכנסת ורואה בהמשך שהמתפללים בו עברו לעת עתה לגינת ביל&quot;ו, עומדים במרחק של כשני מטרים זה מזה, עוטים מסכות [[ומתפללים בין העצים|https://www.youtube.com/watch?v=GI4GsYyofas]].
 
 
 
