--- a/english.html
+++ b/english.html
@@ -315,6 +315,8 @@ Error message and password prompt
 
 <li>Barby</li>
 
+<li>Bearage night</li>
+
 <li>Beautiful Ahal</li>
 
 <li>Béchamel sauce</li>
@@ -701,7 +703,7 @@ Error message and password prompt
 
 <li>Life is not About Talking</li>
 
-<li>Life style</li>
+<li>Lifestyle</li>
 
 <li>Lily</li>
 
@@ -900,6 +902,8 @@ Error message and password prompt
 <li>Public Transportation</li>
 
 <li>Queng</li>
+
+<li>Queng's workshop</li>
 
 <li>Radio epgb</li>
 
@@ -9105,7 +9109,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200428093154690" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200428104311688" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200430202907615" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9114,7 +9118,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Once [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9134,7 +9138,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200429113007149" title="$:/temp/search">
+<div created="20161023184814872" modified="20200430202148403" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9528,8 +9532,13 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 
 </pre>
 </div>
-<div created="20200426135314675" modified="20200426135419525" tags="[[True stories]] Metafiction" title="Amalya">
+<div created="20200426135314675" modified="20200430194128541" tags="[[True stories]] Metafiction" title="Amalya">
 <pre>[img[pictures/amalya.jpg]]
+
+
+!!![[Gura]]:
+
+To place a (gloved) hand over her face, and twist. 
 
 
 
@@ -9689,7 +9698,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200429135846356" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]]" title="Baking">
+<div created="20200216150039212" modified="20200430194832626" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9723,6 +9732,28 @@ A week ago on Saturday I took a taxi to the [[Barby|https://www.barby.co.il/]] t
  &lt;&lt;heblink [[בארבי]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200430191811719" modified="20200430202704618" tags="[[Dreams that we've dreamt]]" title="Bearage night">
+<pre>[img[pictures/HqWn77LXEeMsLQ5x.JPG]]
+
+
+!!![[Gura]]:
+
+At that night I've made out my mind to stop at once acting as any of them basic girls, and change my [[lifestyle|Lifestyle]].
+
+At the afternoon of that day [[Alfred]] and [[Yoyo]] came back from the Netherland with wild shrooms, and an industrial amount of gummy bears for self use.
+ 
+Around ten PM Yoyo, Alfred, [[Iry]], [[Queng]], [[Cheng]] and I took a sample of the dark kind, and in a walking pace we've tried all 12 shades of them.
+
+Around midnight my body floated half a meter in the air, and my head sank deeply in the ground like a lame duck, and the few hours that followed were life changing. I did however, missed the historic moment when the boys recalled [[Goldie and the three bears|https://en.wikipedia.org/wiki/Goldilocks_and_the_Three_Bears]], after Cheng filmed Iry's [[Hawaiian pineapple baby doll|Iry's Hawaiian pineapple house]] (Iry continues to look out for baby pineapple, who disappeared that night) placed with arched back on top of the dismembered corpse of a gummy bear. Inspired by the fairy tales Chang kept on shooting, yoyo kept writing and I kept on being a creature of habit.
+
+This is the starring picture at [[bearge elastic|http://coensisters.org/doobonage.html]] website.
+
+
+
+
+
+ &lt;&lt;heblink [[ליל הדובונאז']]&gt;&gt;</pre>
 </div>
 <div created="20200223155132460" modified="20200324165632131" tags="[[Here in the Ghetto]] Music [[Outer sisters]] Metafiction [[Hunky Dory]]" title="Beautiful Ahal">
 <pre>[img[pictures/ahal-eden.jpg]]
@@ -10354,7 +10385,7 @@ Maybe now, us,  the residents of Toontown, will get the ending that we deserve, 
 
 </pre>
 </div>
-<div created="20180915085721246" modified="20200406161358185" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20200430202904877" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -10371,7 +10402,7 @@ Maybe now, us,  the residents of Toontown, will get the ending that we deserve, 
 Hello,
 
 In December 2015, 10 days after Gura, Dandan and I moved into [[the apartment|Wishing star 01]], we had friends over for the [[Christmas dinner]].
-It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wobbling, crazy happy with myself.
+It was a fantastic meal, [[gummy-a-bearage|Bearage night]]. I mostly remember me standing there, wobbling, crazy happy with myself.
 
 For the opening lines, I'm pasting the part where Eva described me standing there, speaking in front of my friends at the [[9-side-wishing-star]]:
 
@@ -11805,9 +11836,12 @@ In order of understanding more, I recommend :
 
  &lt;&lt;heblink [[אירי טוענת]]&gt;&gt;</pre>
 </div>
-<div created="20200322154142968" modified="20200426140714352" tags="Children Houses Families" title="Iry's Hawaiian pineapple house">
+<div created="20200322154142968" modified="20200430202847910" tags="Children Houses Families" title="Iry's Hawaiian pineapple house">
 <pre>[img[pictures/AMMWBcSauRNlvNUR.JPG]]
 
+!!![[Gura]]:
+
+For her fourth birthday, [[Iry]] got a present from her aunt, who came back from a visit in Hawaii- a pineapple house made out of padded fabric. In the pineapple lived a Hawaiian dad, a Hawaiian mom, their little daughter who will become Goldie the elastic girl, and baby pineapple that Iry liked to brag about. On the [[gummy-a-bearage night|Bearage night]] pineapple baby got lost, and Iry is still bitter about it. On the other hand, the website [[bearge elastic|http://coensisters.org/doobonage.html]] was established.
 
 
 
@@ -11896,11 +11930,14 @@ I say that I love Jeff Bridges, but more than all he's the [[dude|https://www.im
  
 </pre>
 </div>
-<div created="20200423124403855" modified="20200423124530090" tags="[[Outer sisters]] Music Films" title="Jim Jarmusch">
+<div created="20200423124403855" modified="20200430194031830" tags="[[Outer sisters]] Music Films" title="Jim Jarmusch">
 <pre>[img[pictures/jim-jarmusch.jpg]]
 
 
 
+!!![[Gura]]:
+
+I think I've watched most of the films of this sensitive beautiful [[prince|https://en.wikipedia.org/wiki/Jim_Jarmusch]], and I loved all of them, because something about him is somewhat  like me. 
 
 
 
@@ -12252,8 +12289,13 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
-<div created="20200322161519320" modified="20200322161704222" tags="Houses" title="Life style">
+<div created="20200322161519320" modified="20200430200516740" tags="Houses [[The team]]" title="Lifestyle">
 <pre>[img[pictures/lifestyle.jpg]]
+
+
+''Is a thing''
+
+[[Worth cutting|They cut down trees]] and [[a post|They give away cell phones]]. 
 
 
  &lt;&lt;heblink [[לייף סטייל]]&gt;&gt;
@@ -12611,10 +12653,13 @@ And tea is for the sicken ones.
  &lt;&lt;heblink [[הכתיבה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226111902502" modified="20200226112209793" tags="[[The Sopranos]] TV [[TV Series]] Children" title="Meadow">
+<div created="20200226111902502" modified="20200430201019365" tags="[[The Sopranos]] TV [[TV Series]] Children" title="Meadow">
 <pre>[img[pictures/meadow-soprano.jpg]]
 
 
+!!![[Angelic]]:
+
+Sweet, beautiful, goodie girl, sensitive, caring [[Meadow Soprano|https://www.imdb.com/name/nm0797464/]]. They stopped the series on time, poor girl, she had to deal with some [[difficult questions|https://www.youtube.com/watch?v=cCDLz2Wabgg]]. 
 
 
 
@@ -13393,8 +13438,7 @@ Egg powder? If by any chance you dropped an egg, let it dry, let the cat scratch
 </pre>
 </div>
 <div created="20200429135731380" modified="20200429135930238" tags="[[Here in the Ghetto]] [[Corona beings]] [[True stories]] [[On the road to somewhere]]" title="Praying at Bilu garden">
-<pre>
-[img[pictures/bilugarden.jpg]]
+<pre>[img[pictures/bilugarden.jpg]]
 
 
 
@@ -13475,14 +13519,32 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 
 </pre>
 </div>
-<div created="20200225185018375" modified="20200225185129562" tags="[[Outer sisters]]" title="Queng">
+<div created="20200225185018375" modified="20200430200821844" tags="[[Outer sisters]]" title="Queng">
 <pre>[img[pictures/queng.jpg]]
+
+
+!!![[Gura]]:
+
+Queng in Chinese is the universe.
+He studied industrial design, and he has a [[working space|Queng's workshop]] at the 13th quarter. He always prefers to make a living of renovating with his friends, and recently Alfred and him have been [[renovating and building furniture|Renovating an selling furniture]] vigorously. 
 
 
 
 
  &lt;&lt;heblink [[קואנג]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200430194740668" modified="20200430200641046" tags="[[True stories]]" title="Queng's workshop">
+<pre>[img[pictures/hasadna-shel-queng.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[הסדנה של קואנג]]&gt;&gt;
 
 </pre>
 </div>
@@ -15343,8 +15405,17 @@ they also said tape''
 
 </pre>
 </div>
-<div created="20200216190732892" modified="20200216191000170" tags="Mothers Baking Recipes" title="When they sleep">
+<div created="20200216190732892" modified="20200430193445776" tags="Mothers Baking Recipes" title="When they sleep">
 <pre>[img[pictures/kesheatem-yeshenim.jpg]]
+
+
+!!![[Eva]]:
+
+In the last year I simply just wanted to live. After I finally met [[Philip]], and finished writing the [[wishing star|9-side-wishing-star]], life became quiet and good.
+
+I wander around the city a lot, hang with the [[cuties|Coen Sisters]], sometimes [[Philip's sons|I, the psychiatrist]] visit.
+
+The great thing that happened lately is, that [[my Iris|Iris the daughter]] came to live here, and in the autumn she'll start to study theater. In the days off's mornings, when they still asleep and I'm already up, I walk around the house, sniff a little around them, feel happy, do all kinds of stuff.
 
 
 &lt;&lt;list-links filter:&quot;[tag[When they sleep]]&quot;&gt;&gt;
