--- a/english.html
+++ b/english.html
@@ -9118,7 +9118,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Bearage night]] Yoyo [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9138,7 +9138,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200430202148403" title="$:/temp/search">
+<div created="20161023184814872" modified="20200430210118844" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9733,7 +9733,7 @@ A week ago on Saturday I took a taxi to the [[Barby|https://www.barby.co.il/]] t
 
 </pre>
 </div>
-<div created="20200430191811719" modified="20200430202704618" tags="[[Dreams that we've dreamt]]" title="Bearage night">
+<div created="20200430191811719" modified="20200430213723821" tags="[[Dreams that we've dreamt]]" title="Bearage night">
 <pre>[img[pictures/HqWn77LXEeMsLQ5x.JPG]]
 
 
@@ -9741,7 +9741,7 @@ A week ago on Saturday I took a taxi to the [[Barby|https://www.barby.co.il/]] t
 
 At that night I've made out my mind to stop at once acting as any of them basic girls, and change my [[lifestyle|Lifestyle]].
 
-At the afternoon of that day [[Alfred]] and [[Yoyo]] came back from the Netherland with wild shrooms, and an industrial amount of gummy bears for self use.
+At the afternoon of that day [[Alfred]] and [[Yoyo]] came back from the Netherland with wild mushrooms, and an industrial amount of gummy bears for self use.
  
 Around ten PM Yoyo, Alfred, [[Iry]], [[Queng]], [[Cheng]] and I took a sample of the dark kind, and in a walking pace we've tried all 12 shades of them.
 
